--- a/index.html
+++ b/index.html
@@ -1470,20 +1470,30 @@
                             </div>
                             <div class="dashboard-stats">
                                 <div class="dash-stat">
+                                    <div class="dash-stat-value">674</div>
+                                    <div class="dash-stat-label">Regular Customers</div>
+                                </div>
+                                <div class="dash-stat secondary">
+                                    <div class="dash-stat-value">8</div>
+                                    <div class="dash-stat-label">Added This Week</div>
+                                </div>
+                                <div class="dash-stat secondary">
                                     <div class="dash-stat-value">12</div>
                                     <div class="dash-stat-label">Jobs Today</div>
                                 </div>
-                                <div class="dash-stat">
-                                    <div class="dash-stat-value">£2,847</div>
-                                    <div class="dash-stat-label">This Week</div>
-                                </div>
-                                <div class="dash-stat secondary">
+                                <div class="dash-stat" style="background: linear-gradient(135deg, #3b82f6, #2563eb);">
                                     <div class="dash-stat-value">3</div>
-                                    <div class="dash-stat-label">Overdue</div>
+                                    <div class="dash-stat-label">Facebook Leads</div>
                                 </div>
-                                <div class="dash-stat secondary">
-                                    <div class="dash-stat-value">98%</div>
-                                    <div class="dash-stat-label">Collected</div>
+                            </div>
+                            <div class="dashboard-stats" style="margin-top: 8px;">
+                                <div class="dash-stat" style="background: linear-gradient(135deg, #f59e0b, #d97706);">
+                                    <div class="dash-stat-value">£380</div>
+                                    <div class="dash-stat-label">Customers Owing</div>
+                                </div>
+                                <div class="dash-stat">
+                                    <div class="dash-stat-value">£2,022</div>
+                                    <div class="dash-stat-label">This Week</div>
                                 </div>
                             </div>
                             <div class="quick-actions">
@@ -1496,29 +1506,15 @@
                                     <span>Customer</span>
                                 </div>
                                 <div class="quick-action">
-                                    <i class="fas fa-receipt"></i>
-                                    <span>Payment</span>
-                                </div>
-                            </div>
-                            <div class="upcoming-job">
-                                <div class="job-time">9:30<span>AM</span></div>
-                                <div class="job-details">
-                                    <h4>John Davidson</h4>
-                                    <p>12 Oak Lane - £45.00</p>
-                                </div>
-                            </div>
-                            <div class="upcoming-job">
-                                <div class="job-time">11:00<span>AM</span></div>
-                                <div class="job-details">
-                                    <h4>Sarah Mitchell</h4>
-                                    <p>45 High Street - £65.00</p>
+                                    <i class="fab fa-facebook"></i>
+                                    <span>Leads</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <h3>Home Dashboard</h3>
-                <p>Your day at a glance - jobs, earnings, and quick actions</p>
+                <p>Customers, leads, owing & earnings at a glance</p>
             </div>
 
             <!-- Route Phone -->
@@ -1765,11 +1761,27 @@
             </div>
 
             <div class="feature-card">
+                <div class="feature-icon" style="background: linear-gradient(135deg, #3b82f6, #1d4ed8);">
+                    <i class="fab fa-facebook-f"></i>
+                </div>
+                <h3>Facebook Leads Integration</h3>
+                <p>Connect your Facebook page and import leads directly into StreakFree. Never miss a potential customer from your ads or page enquiries.</p>
+            </div>
+
+            <div class="feature-card">
                 <div class="feature-icon">
                     <i class="fas fa-user-group"></i>
                 </div>
                 <h3>Team Management</h3>
                 <p>Add workers to your team, assign jobs, and let them access their schedule. They see only what they need - your data stays private.</p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon" style="background: linear-gradient(135deg, #f59e0b, #d97706);">
+                    <i class="fas fa-pound-sign"></i>
+                </div>
+                <h3>Outstanding Balance Tracking</h3>
+                <p>See exactly who owes you money at a glance. Chase payments with one click and keep your cash flow healthy.</p>
             </div>
         </div>
     </section>
