Add Facebook Leads badge to hero section

--- a/index.html
+++ b/index.html
@@ -1343,6 +1343,7 @@
                     <span class="badge"><i class="fas fa-check"></i> Auto Payment Matching</span>
                     <span class="badge"><i class="fas fa-check"></i> Bank Integration</span>
                     <span class="badge"><i class="fas fa-check"></i> Route Optimisation</span>
+                    <span class="badge"><i class="fas fa-check"></i> Facebook Leads</span>
                 </div>
 
                 <div class="hero-cta">
