Add API Connector badge to hero section

--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,7 @@
                     <span class="badge"><i class="fas fa-check"></i> Bank Integration</span>
                     <span class="badge"><i class="fas fa-check"></i> Route Optimisation</span>
                     <span class="badge"><i class="fas fa-check"></i> Facebook Leads</span>
+                    <span class="badge"><i class="fas fa-check"></i> API Connector</span>
                 </div>
 
                 <div class="hero-cta">
