Replace app links with Coming Soon - still in testing

--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
                 <a href="#features">Features</a>
                 <a href="#industries">Industries</a>
                 <a href="#payments">Smart Payments</a>
-                <a href="https://app.streakfree.app" class="btn-launch">Launch App <i class="fas fa-arrow-right"></i></a>
+                <span class="btn-launch" style="opacity: 0.7; cursor: default;">Coming Soon</span>
             </div>
         </div>
     </nav>
@@ -1348,9 +1348,9 @@
                 </div>
 
                 <div class="hero-cta">
-                    <a href="https://app.streakfree.app" class="btn-primary">
-                        Get Started Free <i class="fas fa-arrow-right"></i>
-                    </a>
+                    <span class="btn-primary" style="opacity: 0.8; cursor: default;">
+                        Coming Soon <i class="fas fa-clock"></i>
+                    </span>
                     <a href="#showcase" class="btn-secondary">
                         <i class="fas fa-mobile-screen"></i> See the App
                     </a>
@@ -1942,9 +1942,9 @@
         <div class="cta-content">
             <h2>Ready to spend less time on admin?</h2>
             <p>Join hundreds of service businesses who've switched to StreakFree. Set up takes minutes, not hours.</p>
-            <a href="https://app.streakfree.app" class="btn-primary">
-                Start Free Today <i class="fas fa-arrow-right"></i>
-            </a>
+            <span class="btn-primary" style="opacity: 0.8; cursor: default;">
+                Coming Soon <i class="fas fa-clock"></i>
+            </span>
         </div>
     </section>
 
