Use real app screenshots instead of AI-generated mockups

--- a/index.html
+++ b/index.html
@@ -1427,15 +1427,15 @@
                 <div class="phone phone-1">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/2ff01846ac754b3a0cc6dffa116028db912c642d9026c60c096dab04ef9d6685.png" alt="Dashboard" class="phone-screenshot">
+                        <img src="screenshot1_dashboard.jpg" alt="Dashboard" class="phone-screenshot">
                     </div>
                 </div>
 
-                <!-- Phone 2 - Route -->
+                <!-- Phone 2 - Schedule -->
                 <div class="phone phone-2">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/9636f6d68cb12c81d4ef4c108c32c4d2fc9874479d96a143cdc2ca70519c6129.png" alt="Route" class="phone-screenshot">
+                        <img src="screenshot2_schedule.jpg" alt="Schedule" class="phone-screenshot">
                     </div>
                 </div>
             </div>
@@ -1456,7 +1456,7 @@
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/2ff01846ac754b3a0cc6dffa116028db912c642d9026c60c096dab04ef9d6685.png" alt="Dashboard" class="phone-screenshot">
+                        <img src="screenshot1_dashboard.jpg" alt="Dashboard" class="phone-screenshot">
                     </div>
                 </div>
                 <h3>Business Dashboard</h3>
@@ -1468,7 +1468,7 @@
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/70f481916efc51287488935afe56034a7c9cb1e75e0aec67a0e17fac6e06ffbc.png" alt="Work Planner" class="phone-screenshot">
+                        <img src="screenshot2_schedule.jpg" alt="Work Planner" class="phone-screenshot">
                     </div>
                 </div>
                 <h3>Work Planner</h3>
@@ -1480,11 +1480,11 @@
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/9636f6d68cb12c81d4ef4c108c32c4d2fc9874479d96a143cdc2ca70519c6129.png" alt="Route Optimisation" class="phone-screenshot">
+                        <img src="screenshot3_route.jpg" alt="Route Sheet" class="phone-screenshot">
                     </div>
                 </div>
-                <h3>Route Optimisation</h3>
-                <p>Save fuel and time with intelligent routing</p>
+                <h3>Route Sheet</h3>
+                <p>See all your jobs on a map with optimised routing</p>
             </div>
 
             <!-- Payments Phone -->
@@ -1492,11 +1492,11 @@
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="https://static.prod-images.emergentagent.com/jobs/cf20e757-7f5a-49c4-9afe-3f313f02ac7a/images/ce30ff59dc0fdc00d369f73a157a59b890bdcfc61976983552c5fec78b2fb77d.png" alt="Payment Tracking" class="phone-screenshot">
+                        <img src="screenshot4_owings.jpg" alt="Payment Tracking" class="phone-screenshot">
                     </div>
                 </div>
                 <h3>Smart Payments</h3>
-                <p>Auto-match bank payments to customers</p>
+                <p>Track who owes you and chase payments easily</p>
             </div>
         </div>
     </section>
