Update marketing website with real app screenshots
- Replaced placeholder mockups with actual app screenshots
- Dashboard showing CrystalClear Windows demo account (12 customers)
- Job List showing 27 jobs, £963.00 value with customer names
- Owings page showing £662.00 total owed with aging breakdown
- All currency displayed in British Pounds (£)
- No 'Perfect Panes' branding visible
- Updated section labels to match screenshot content

--- a/index.html
+++ b/index.html
@@ -1463,28 +1463,28 @@
                 <p>Customers, leads, owing & earnings at a glance</p>
             </div>
 
-            <!-- Work Planner Phone -->
+            <!-- Job List Phone -->
             <div class="showcase-item">
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="screenshot2_schedule.jpg" alt="Work Planner" class="phone-screenshot">
+                        <img src="screenshot2_schedule.jpg" alt="Job List" class="phone-screenshot">
                     </div>
                 </div>
-                <h3>Work Planner</h3>
-                <p>Plan your week with drag-and-drop scheduling</p>
+                <h3>Job List</h3>
+                <p>View all upcoming jobs with customer details at a glance</p>
             </div>
 
-            <!-- Route Phone -->
+            <!-- Jobs Overview Phone -->
             <div class="showcase-item">
                 <div class="phone">
                     <div class="phone-screen">
                         <div class="phone-notch"></div>
-                        <img src="screenshot3_route.jpg" alt="Route Sheet" class="phone-screenshot">
+                        <img src="screenshot3_route.jpg" alt="Jobs Overview" class="phone-screenshot">
                     </div>
                 </div>
-                <h3>Route Sheet</h3>
-                <p>See all your jobs on a map with optimised routing</p>
+                <h3>Jobs Overview</h3>
+                <p>Track job values, filter by status and manage your schedule</p>
             </div>
 
             <!-- Payments Phone -->
